Eevee: Custom object properties don't work in shader for Curves objects #101896

Closed
opened 2022-10-18 11:55:45 +02:00 by Simon Thommes · 13 comments
Member

System Information
Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-18 03:54, hash: e47bf05e85
Worked: unknown

Short description of error
Screenshot from 2022-10-18 11-54-13.png

Exact steps for others to reproduce the error

  • create curves object
  • add custom object property
  • add it to the shader

custom_object_properties_curves.blend

**System Information** Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-18 03:54, hash: `e47bf05e85` Worked: unknown **Short description of error** ![Screenshot from 2022-10-18 11-54-13.png](https://archive.blender.org/developer/F13703074/Screenshot_from_2022-10-18_11-54-13.png) **Exact steps for others to reproduce the error** - create curves object - add custom object property - add it to the shader [custom_object_properties_curves.blend](https://archive.blender.org/developer/F13703081/custom_object_properties_curves.blend)
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Author
Member

@angavrilov
Is that something you cloud look into?

@angavrilov Is that something you cloud look into?
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. I also noticed that curve color is changing with the view, is it intentional?

I can confirm. I also noticed that curve color is changing with the view, is it intentional?

Added subscriber: @fclem

Added subscriber: @fclem

@fclem This seems to happen because DRW_shgroup_curves_create_sub does DRW_shgroup_call_no_cull inside before DRW_shgroup_add_material_resources is reached.

@fclem This seems to happen because `DRW_shgroup_curves_create_sub` does `DRW_shgroup_call_no_cull` inside before `DRW_shgroup_add_material_resources` is reached.

@angavrilov This is not the issue. All resources bindings are executed before any drawcall inside the same DRWShadingGroup. It might only be a problem if the DRW_shgroup_call_no_cull is not inside the same shgroup as DRW_shgroup_add_material_resources.

@angavrilov This is not the issue. All resources bindings are executed before any drawcall inside the same `DRWShadingGroup`. It might only be a problem if the `DRW_shgroup_call_no_cull` is not inside the same shgroup as `DRW_shgroup_add_material_resources`.

In #101896#1434284, @fclem wrote:
It might only be a problem if the DRW_shgroup_call_no_cull is not inside the same shgroup as DRW_shgroup_add_material_resources.

Copying from chat for the record: the problem is that DRW_shgroup_add_material_resources also does grp->uniform_attrs = GPU_material_uniform_attributes(material) which is needed by drw_resource_handle.

> In #101896#1434284, @fclem wrote: > It might only be a problem if the `DRW_shgroup_call_no_cull` is not inside the same shgroup as `DRW_shgroup_add_material_resources`. Copying from chat for the record: the problem is that `DRW_shgroup_add_material_resources` also does `grp->uniform_attrs = GPU_material_uniform_attributes(material)` which is needed by `drw_resource_handle`.

This issue was referenced by be38344de0

This issue was referenced by be38344de00b338221b546f8964727aadc3000d6

This issue was referenced by 3d878cd0df

This issue was referenced by 3d878cd0df31ae89e1fc2a99b3f90e12c6db9c55

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2022-10-19 17:08:46 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101896
No description provided.