Fix T101896 Eevee: Custom object properties don't work in shader for Curves objects

Move the material resources binding inside the
`DRW_shgroup_curves_create_sub` so that `DRW_shgroup_call_no_cull`
extracts the attributes.